# grabette

./: .gitattributes  .gitignore  NOTICE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release-pr.yml
config/: config.txt  config_zero.txt
docs/: index.html  rgbd_branch_status.md
grabette/: __main__.py  button_listener.py  config.py  daemon.py  grpc_server.py  hf.py  hotspot_manager.py  jobs.py  models.py  output.py  replay.py  scheduler.py  session.py  slam.py  wifi.py
grabette/app/: dependencies.py  main.py
grabette/app/routers/: camera.py  charts.py  daemon.py  grpc.py  huggingface.py  oakd.py  replay.py  sessions.py  state.py  sync.py  system.py  teleop.py  wifi.py
grabette/backend/: base.py  grpc_wrapper.py  mock.py  rpi.py
grabette/bluetooth/: bluetooth_service.py
grabette/hardware/: angle.py  bmi088.py  button.py  camera.py  imu.py  oak_capture.py  oakd.py  oakd_teleop.py
grabette/ui/: api_client.py  app.py
integrations/DiffusionPolicy/: .gitignore  README.md  analyze_dataset.py  check_dataset_videos.py  clean_dataset.py  convert_dataset.py  offline_eval.py  ood_check.py  pyproject.toml  recording_demonstrations_guide.md  resize_dataset_videos.py  rotation.py  run_pipeline.sh  train.py  vision_check.py
integrations/Pi05/: README.md  probe_task_sensitivity.py  pyproject.toml  smoke_generation.py  smoke_pi05_reference.py  train.py
integrations/Pi05/pi0fast/: README.md  fit_fast_tokenizer.py  verify_fast_tokenizer.py
integrations/Pi0Fast/: README.md  pyproject.toml  smoke_generation.py  smoke_pi05_reference.py  train_pi0fast.py
integrations/openarm/: README.md
integrations/openarm/openarm_gripette/: README.md  pyproject.toml
integrations/openarm/openarm_gripette/examples/: _torque_guard.py  calibrate_arm_no_gripper.py  cartesian_sinusoid.py  cartesian_square.py  clear_motor_fault.py  disable_all_motors_can.py  log_motor_health.py  read_arm_state.py  read_motor_fault.py  reset_arm.py  set_arm_pose.py  set_arm_torque.py  set_gripper_pose.py  view_camera.py
integrations/openarm/openarm_gripette/openarm_gripette/: __init__.py  config_openarm7_follower.py  grpc_server_real.py  openarm7_follower.py
integrations/openarm/openarm_gripette_model/: README.md  pyproject.toml
integrations/openarm/openarm_gripette_model/openarm_gripette_model/openarm_right/: config.json  config.json.mujoco  config.json.urdf  robot.urdf  robot.xml
integrations/openarm/openarm_gripette_model/openarm_gripette_model/openarm_right/assets/: 602_00009_phillips_flat_head__m2_x_0_40mm_thread__14mm_long_screw_92010a802.stl  602_00009_phillips_flat_head__m2_x_0_40mm_thread__14mm_long_screw_92010a802_1.stl  602_00009_phillips_flat_head__m2_x_0_40mm_thread__14mm_long_screw_92010a802_2.stl  606_00021_sr_back_cover_py074.stl  backplate.stl  bulkhead.stl  camera_imu_support.stl  composite_part_1.stl  distal.stl  dm_j8009p_2_step.stl  dm_j8009p_2_step_1.stl  feetech_sts3215__configuration_default.stl  grip_shell_r.stl  grip_soft_tip_r.stl  gripper_base.stl  gripper_base_r.stl  hexalobular_socket_pan_head_screw_m2_5x0_45_x_6__a0337967dd2415a96d32f4de9af75974.stl  hfsb6_6060_750_1_step.stl  hub_dyn.stl  j1_a_1_step.stl  j1_c_1_step.stl  j2_c_2_step.stl  j6_a_3_step.stl  j6_d_3_step.stl  j7_b_2_step.stl  j7_e_2_step.stl  j8_a_2_step.stl  proximal_bottom.stl  proximal_side.stl  proximal_top.stl  sr_lens_py058.stl
integrations/openarm/openarm_gripette_model/openarm_gripette_model/openarm_right/assets/merged/: distal_visual.stl  dm_j4310_1_2_step_2_visual.stl  dm_j4310_1_2_step_visual.stl  dm_j4340_2_step_visual.stl  dm_j8009p_2_step_1_collision.stl  feetech_sts3215__configuration_default_visual.stl  gripper_base_visual.stl  hfsb6_6060_750_1_step_collision.stl  j2_b_2_step_visual.stl  j6_a_3_step_collision.stl  j7_e_2_step_visual.stl
integrations/openarm/openarm_gripette_simu/: .gitignore  README.md  generate_proto.py  pyproject.toml
integrations/openarm/openarm_gripette_simu/examples/: check_grabette_reachable.py  collect_grasp_data.py  collect_grasp_dataset.py  collect_grasp_dataset_arm.py  collect_reach_dataset.py  evaluate.py  grabette_trajectory.py  manual_grasp_test.py  push_to_hub.py  replay_dataset.py  replay_episode.py  replay_grabette_on_arm.py  sample_init_joints.py
integrations/openarm/openarm_gripette_simu/openarm_gripette_simu/: __init__.py  arm_servicer.py  camera.py  domain_randomization.py  gripper_servicer.py  ik_feasibility.py  kinematics.py  pedestal.py  server.py  simulation.py  start_collision.py
integrations/openarm/openarm_gripette_simu/openarm_gripette_simu/proto/: arm_pb2.py  arm_pb2.pyi  arm_pb2_grpc.py  gripper_pb2.pyi  gripper_pb2_grpc.py
integrations/openarm/openarm_gripette_simu/proto/: arm.proto
integrations/openarm/openarm_gripette_simu/scenes/: gen_grabette_grasp.py  grabette_grasp.xml  table_grasp.xml
scripts/: angle_test.py  calibrate_angles.py  check_hardware.py  csv_to_tum.py  teleop_bridge.py  teleop_vslam_test.py
spaces/: README.md  app.py  requirements.txt
spaces/grabette-slam/: Dockerfile  README.md  app.py  controller.py  deploy.sh  pipeline.py  requirements.txt  review.py  views.py
systemd/: grabette-bluetooth.service  grabette-hotspot.service  grabette.service
tests/grabette/: test_config.py  test_daemon.py  test_frames.py  test_jobs.py  test_sync.py
tests/grabette_postprocess/: conftest.py  test_check_trajectory.py  test_convert.py  test_dataset.py  test_oak_slam.py  test_recording.py  test_stream_timing.py  test_sync.py  test_tags.py  test_trajectory.py
tests/gripette/: test_config.py  test_motors.py  test_sync.py
urdf/grabette_right/: robot.urdf
