[project]
name = "grabette-diffusion-policy"
version = "0.1.0"
description = "Diffusion Policy training & data-prep for Grabette demonstrations, on stock upstream lerobot."
# <3.13: the torch/torchcodec native stack produced repeated segfaults on
# Python 3.13 (worker crashes, import-time faults) while identical runs on 3.12
# were stable. Pin to the validated interpreter; uv installs it automatically.
requires-python = ">=3.12,<3.13"
dependencies = [
    # [training] carries the dataset stack plus accelerate/wandb required by
    # the documented lerobot-train and cloud-logging paths. [diffusion]
    # carries diffusers, required at policy construction.
    "lerobot[training,diffusion]==0.6.0",
    "scipy>=1.10",
    "matplotlib>=3.7",  # offline_eval.py overlay plots
    # numpy / torch / pyarrow come transitively with lerobot.
]

[tool.uv]
# Scripts-only project: manage the dependency env, don't build/install this dir.
package = false
