[project]
name = "openarm-gripette"
version = "0.1.0"
description = "Real-hardware driver + gRPC server for the OpenArm-Gripette follower (7-DoF arm, gripette gripper on its own service)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Upstream LeRobot: provides the OpenArmFollower base class + Damiao motor
    # bus that we subclass in openarm7_follower.py. The [damiao] extra pulls in
    # python-can and Damiao SDK bits used by the CAN driver.
    "lerobot[damiao]>=0.5.1 ; python_version >= '3.12'",

    # Kinematics + proto stubs + rotation utils. Bit-for-bit shared with the
    # simulator so the same eval script targets sim or real interchangeably.
    # Transitively pulls MuJoCo — unused on real-robot deployments; accepted
    # for now (see integrations/openarm/README.md for the wart).
    "openarm-gripette-simu",

    "grpcio>=1.60",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
# Resolved from the monorepo workspace (integrations/openarm/openarm_gripette_simu),
# not PyPI.
openarm-gripette-simu = { workspace = true }

# See openarm_gripette_simu/pyproject.toml — lerobot pulls opencv-python-headless
# which clobbers our opencv-python. Override cascades to any consumer of this pkg.
[tool.uv]
override-dependencies = ["opencv-python-headless ; sys_platform == 'never'"]
