[project]
name = "openarm-gripette"
version = "0.1.0"
description = "Real-hardware driver + gRPC server for the OpenArm-Gripette follower (7-DoF arm, gripette gripper on its own service)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Upstream LeRobot: provides the OpenArmFollower base class + Damiao motor
    # bus that we subclass in openarm7_follower.py. The [damiao] extra pulls in
    # python-can and Damiao SDK bits used by the CAN driver.
    "lerobot[damiao]>=0.5.1 ; python_version >= '3.12'",

    # Kinematics + proto stubs + rotation utils. Bit-for-bit shared with the
    # simulator so the same eval script targets sim or real interchangeably.
    # Transitively pulls MuJoCo — unused on real-robot deployments; accepted
    # for now (see integrations/openarm/README.md for the wart).
    "openarm-gripette-simu",

    # Floor matches the proto stubs generated in openarm-gripette-simu
    # (GRPC_GENERATED_VERSION=1.81.0): they refuse to import on older grpcio.
    "grpcio>=1.81",
    "numpy",

    # OpenArm's official CAN bindings — used only by the firmware-zero
    # calibration tool (examples/calibrate_arm_no_gripper.py). Not on PyPI:
    # built from source at install time (scikit-build-core fetches cmake
    # automatically; a C++ compiler must be present). Pinned: newer tags add
    # build deps (CLI11 at 1.2.9) and require a matching system OpenArmCAN.
    "openarm-can",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
# Resolved from the monorepo workspace (integrations/openarm/openarm_gripette_simu),
# not PyPI.
openarm-gripette-simu = { workspace = true }
openarm-can = { git = "https://github.com/enactic/openarm_can", subdirectory = "python", tag = "1.2.8" }

# See openarm_gripette_simu/pyproject.toml — lerobot pulls opencv-python-headless
# which clobbers our opencv-python. Override cascades to any consumer of this pkg.
[tool.uv]
override-dependencies = ["opencv-python-headless ; sys_platform == 'never'"]
