[project]
name = "openarm-gripette-simu"
version = "0.1.0"
description = "MuJoCo simulation of the OpenArm right arm + Gripette gripper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mujoco>=3.6",
    "placo>=0.9",
    "numpy",
    "opencv-python>=4.9",
    # Floor matches the generated proto stubs (GRPC_GENERATED_VERSION=1.81.0):
    # they refuse to import on older grpcio.
    "grpcio>=1.81",
    "protobuf>=4.25",
    "openarm-gripette-model",
]

[project.optional-dependencies]
dev = ["grpcio-tools>=1.60"]
dataset = ["lerobot[dataset]==0.6.0 ; python_version >= '3.12'"]
# Policy evaluation client (examples/evaluate.py): loads a trained policy and
# drives the sim over gRPC. [diffusion] supplies diffusers; [pi] supplies the
# transformers stack for the Pi0/Pi0.5/Pi0Fast checkpoints this client supports.
# scipy is also used directly for rotation math.
eval = [
    "lerobot[diffusion,pi]==0.6.0 ; python_version >= '3.12'",
    "scipy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
# Resolved from the monorepo workspace (integrations/openarm/openarm_gripette_model),
# not PyPI. Was a local `../` path dep in the standalone repo.
openarm-gripette-model = { workspace = true }

# OpenCV is intentionally headless by default: lerobot depends on
# opencv-python-headless and the on-device services (grabette/Pi) need it, and
# one workspace venv holds a single cv2. `evaluate.py --debug` saves frames to
# disk in this mode; for a live GUI window on a workstation, see the README
# ("Evaluate a trained policy" → OpenCV opt-in). NOTE: a member-level [tool.uv]
# override-dependencies is a no-op — uv honors it only at the workspace root —
# so the previous override here (which never took effect) was removed.
